syntax = "proto3";

package com.academy.fintech.scoring;

option java_multiple_files = true;

service ScoringService{
  rpc Score(ScoringRequest) returns (ScoringResponse) {}
}

message ScoringRequest {
  string disbursementAmount = 1;
  string clientId = 2;
  string salary = 3;
}

message ScoringResponse {
  int32 score = 1;
}